--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,17 @@ DerivedData
 Pods
 *.lock
 *.xcworkspace
+
+
+#VUE
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
